fix: move nav menu behind main menu on pause

--- a/src/components/hud/hud.css
+++ b/src/components/hud/hud.css
@@ -91,6 +91,7 @@
     width: fit-content;
     justify-content: flex-start;
     gap:0;
+    z-index: 0;
   }
 
 }
